Thu Dec 09 10:05:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c:
	- fix a possible leak and memory very low
	- avoid memcpy(x,x,-1)
	- better null parameters handling

Wed Dec 08 21:29:08 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO: update
	* misc/test-dist.sh: bit improve
	* src/odbc/convert_tds2sql.c src/odbc/convert_tds2sql.h:
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/unittests/data.c:
	* src/tds/convert.c:
	- fix bug converting numeric with different precision/scale
	- add some TODO for cursors support in ODBC
	* src/odbc/sql2tds.h: add copyright line for 2004
	* src/odbc/unittests/genparams.c: improve

Tue Dec  7 17:34:21 EST 2004	JK Lowden <jklowden@schemamania.org>
	* include/tds.h
	* src/tds/net.c src/tds/query.c src/tds/token.c src/tds/util.c
	* src/dblib/bcp.c src/dblib/dblib.c
	* src/ctlib/blk.c src/ctlib/ct.c
	- implement and use tds_set_state() to set state with logging.
	- change TDSSOCKET::state to enumerated type.  
	
Tue Dec  7 16:10:44 EST 2004	JK Lowden <jklowden@schemamania.org>
	* acinclude.m4 fix underquoting
	- cf. info '(automake)Extending aclocal' (Autoconf 2.59)

Tue Dec 07 18:48:27 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/Makefile.am src/ctlib/Makefile.am:
	* src/dblib/Makefile.am src/odbc/Makefile.am:
	* src/server/Makefile.am src/tds/Makefile.am:
	- give a priority order to libraries

Mon Dec 06 15:38:56 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: fix state change

Mon Dec 06 14:28:28 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c: remove printf
	* src/tds/convert.c: cleanup
	* src/tds/query.c: reuse tds_to_quering

Sun Dec 05 21:03:50 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS: updated
	* include/ctlib.h include/tds.h src/ctlib/ct.c:
	* src/tds/mem.c src/tds/query.c src/tds/token.c:
	- removed cursor_client_id, use direct TDSCURSOR*
