@@ -1,3 +1,8 @@
+Thu Dec 09 11:15:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/unittests/Makefile.am:
+	* src/odbc/unittests/insert_speed.c(added):
+	- add a new test from ML
+
 Thu Dec 09 10:05:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
 	* src/dblib/rpc.c:
 	- fix a possible leak and memory very low
